# cogen

./: .gitignore  README.md  cogen.cabal  cogen.dox  getstarted.txt  stack.yaml
app/: Main.hs
coral/: compiler.coral
coral/coral-grammar/: README.md  package.json
coral/coral-grammar/grammars/: coral-grammar.cson
coral/coral-grammar/settings/: coral-grammar.cson
database/: logsymbols.db  lsymbols.db  rules.db  tree.db
database/programs/: Plus.db  after.coral  before.coral  before1.coral  boundVariables.db  compiler.coral  compiler.db  conclusion.db  forall.db  left-to-right.db  premises.db  primes.coral  right-to-left.db
docs/: coral-syntax.md  genolog-compiler.md  ideas.md  pattern-matching.md
src/: Compiler.hs  Database.hs  DebugInfo.hs  Expr.hs  Global.hs  LSymbol.hs  Program.hs  Routine.hs  Rule.hs  Term.hs  Terms.hs  Utils.hs  _global.hs  _problem.hs  compiler.hs  database.hs  global.hs  lsymbol.hs  program.hs  routine.hs  rule.hs  symbol.hs  term.hs
src/Compiler/: CSymbol.hs  Info.hs
src/Coral/: Data.hs  Handle.hs  Parser.hs  Program.hs  Symbol.hs  Utils.hs
src/Program/: BuiltIn.hs  Database.hs  Handle.hs  Handler.hs  PSymbol.hs  Parser.hs  Writer.hs
src/Structs/: Trie.hs
src/_program/: _parser.hs  _psymbol.hs
src/compiler/: compiler.hs  database.hs  handle.hs  info.hs  program.hs  tree.hs  utils.hs
src/compiler/Tree/: database.hs
src/compiler/program/: symbol.hs
src/program/: Data.hs  Handle.hs  parser.hs  psymbol.hs  symbol.hs
src/rules/: rule.hs
test/: Spec.hs
test/specs/: 1.coral  1.out
