name:                cogen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cogen#readme
license:             BSD3
license-file:        LICENSE
author:              Grigoriy Bokov, Gleb Kalachev
maintainer:          example@example.com
copyright:           2017 Grigoriy Bokov, Gleb Kalachev
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database
                       Global
                       LSymbol
                       Program
                       Program.Database
                       Program.Handler
                       Program.Parser
                       Program.Writer
                       Rule
                       Term
                       Utils
  build-depends:       base >= 4.7 && < 5,
                       containers, strict, mtl, directory, filepath, MissingH,
                       array, regex-posix, text, parsec
  default-language:    Haskell2010

executable cogen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-missing-signatures
  build-depends:       base
                     , cogen
  default-language:    Haskell2010

test-suite cogen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, directory, mtl
                     , cogen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-missing-signatures
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cogen
